# fast-api-101

fastapi_app/: hello.py  pyproject.toml
fastapi_app/fast_zero/: app.py  schemas.py
fastapi_app/tests/: test_app.py
